syntax = "proto3";
package g2diagnostic;


option go_package = "github.com/docktermj/go-xyzzy-grpc/g2diagnostic";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";


// The greeting service definition.
service G2Diagnostic {
  rpc CheckDBPerf (CheckDBPerfRequest) returns (CheckDBPerfResponse) {}
  rpc ClearLastException (Empty) returns (Empty) {}
  rpc Init (InitRequest) returns (Empty) {}
}

message CheckDBPerfRequest {
  int32 secondsToRun = 1;
}

message CheckDBPerfResponse {
  string result = 1;
}

message Empty {}

message InitRequest {
  string moduleName = 1;
  string iniParams = 2;
  int32 verboseLogging = 3;
}
